--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "@alpacamybags118/yt-dlp-exec",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Wrapper around yp-dlp to execute it as a process in your project.",
   "main": "src/index.js",
   "scripts": {
     "test": "jest ./test",
     "postinstall": "node ./hooks/download-yt-dlp.js"
   },
+  "homepage": "https://github.com/alpacamybags118/yt-dlp-exec#readme",
   "keywords": [],
   "author": "alpacamybags118",
   "license": "ISC",
